--- a/senguo.cc/admin/templates/m-admin/shop-info.html
+++ b/senguo.cc/admin/templates/m-admin/shop-info.html
@@ -79,7 +79,7 @@
         </li>
         <li>
             <a href="{{reverse_url('MadminAddress')}}?province={{province}}&city={{city}}&detail={{current_shop.shop_address_detail or ''}}&code={{current_shop.shop_city or ''}}" class="">
-                <span class="fr c333 more">{{address}}</span>
+                <span class="fr c333 more clip">{{address}}</span>
                 <span class="text-left">店铺地址</span>
             </a>
         </li>
