--- a/senguo.cc/admin/static/bbs/css/reset.css
+++ b/senguo.cc/admin/static/bbs/css/reset.css
@@ -63,6 +63,7 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .red-txt{color: #ff6666!important;}
 .green{color: #4be2d4!important;}
 .c000,.text-black{color: #333 !important;}
+.c0{color: #000000!important;}
 .c333{color: #333!important;}
 .c666{color: #666!important;}
 .c999{color: #999!important;}
