--- a/senguo.cc/admin/static/css/superadmin-main.css
+++ b/senguo.cc/admin/static/css/superadmin-main.css
@@ -81,9 +81,11 @@
 .btn-checked{background-color: #FFF ;color:#52b43f;border:none;width:60px;height: 35px;}
 .ipt-with100{width: 100px;}
 .mlf15-2{margin-left: 15px;}
-.btn-green{background:#009933;border:none;width: 100px;height:35px;color:white;}
+.btn-green{background:#009933;border:none;width: 100px;height:35px;color:white;padding: 6px 12px !important;}
+.btn-grey{background:#ddd;border:none;width: 100px;height:35px;color:#333 !important;padding:6px 12px !important;}
 .btn-white{background:#FFF;border:1px solid #E8E8E8;width:100px;height:35px;color:black;}
 .mlf170{margin-left: 170px;}
+.w30m0{width:33.3333%;margin:0 !important;}
 /**/
 
 /*add by jyj 2015-6-18*/
